--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,6 +2,13 @@
 import "../styles/global.css";
 import Social from './Social.astro';
 ---
+<style>
+  footer {
+    display: flex;
+    gap: 1rem;
+    margin-top: 2rem;
+  }
+</style>
 
 <footer>
   <Social platform="github" username="withastro" />
