--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,5 +1,8 @@
 ---
+import "../styles/global.css";
 ---
-<a href="/">首页</a>
-<a href="/about/">关于</a>
-<a href="/blog/">博客</a>
+<div id="main-menu" class="nav-links">
+  <a href="/">首页</a>
+  <a href="/about/">关于</a>
+  <a href="/blog/">博客</a>
+</div>
