--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,6 @@
 ---
 import Footer from '../components/Footer.astro';
-import Navigation from '../components/navigation.astro';
+import Header from '../components/Header.astro';
 import '../styles/global.css';
 
 const pageTitle = "关于我";
@@ -48,11 +48,10 @@ const textCase = "capitalize";
     <title>{pageTitle}</title>
   </head>
   <body>
-    <Navigation/>
+    <Header/>
     <h1>{pageTitle}</h1>
     <p>我正在学习 Astro 的入门教程。</p>
     <p>随着完成更多教程，该站点将不断更新，所以请继续查看我的旅程将如何进行吧！</p>
-
     <p>以下是关于我的几个事实：</p>
         <ul>
           <li>我的名字是{identity.firstName}.</li>
@@ -70,7 +69,6 @@ const textCase = "capitalize";
     {happy && <p>我非常乐意学习 Astro！</p>}
     {finished && <p>我完成了这节教程！</p>} <!-- 这行不会显示，因为 finished 是 false -->
     {goal === 3 ? <p>我的目标是在三天内完成。</p> : <p>我的目标不是 3 天。</p>}
-
     <Footer/>
   </body>
 </html>
