--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,6 +1,6 @@
 ---
 import '../styles/global.css';
-import Navigation from '../components/Navigation.astro';
+import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import Navigation from '../components/navigation.astro';
 
@@ -15,7 +15,7 @@ import Navigation from '../components/navigation.astro';
     <title>YAstro</title>
   </head>
   <body>
-      <Navigation/> 
+      <Header/> 
       <h1>我的 Astro 网站</h1>
       <h1>我的 Astro 学习博客</h1>
       <p>在这里，我将分享我的 Astro 学习之旅。</p>
