--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import Navigation from '../components/Navigation.astro';
+import Header from '../components/Header.astro';
 import "../styles/global.css";
 import Footer from '../components/Footer.astro';
 
@@ -15,7 +15,7 @@ const pageTitle = "首页";
     <title>YAstro</title>
   </head>
   <body>
-    <Navigation/>
+    <Header/>
     <h1>Astro</h1>
     <Footer/>
   </body>
