改进导航适应性，增加Menu组件，增加.menu样式，适应移动端导航显示

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,5 +18,13 @@ const pageTitle = "首页";
     <Header/>
     <h1>Astro</h1>
     <Footer/>
+    <script>
+      const menu = document.querySelector('.menu');
+
+      menu?.addEventListener('click', () => {
+      const isExpanded = menu.getAttribute('aria-expanded') === 'true';
+      menu.setAttribute('aria-expanded', `${!isExpanded}`);
+    });
+  </script>
   </body>
 </html>
