--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -28,6 +28,14 @@ footer {
   text-align: center;
 }
 /* 导航样式 */
+.menu {
+  background-color: #0d0950;
+  border: none;
+  color: #fff;
+  font-size: 1.2rem;
+  font-weight: bold;
+  padding: 5px 10px;
+}
 
 .nav-links {
   width: 100%;
@@ -51,6 +59,10 @@ footer {
   background-color: #ff9776;
 }
 
+:has(.menu[aria-expanded="true"]) .nav-links {
+  display: unset;
+}
+
 @media screen and (min-width: 636px) {
   .nav-links {
     margin-left: 5em;
@@ -63,5 +75,9 @@ footer {
   .nav-links a {
     display: inline-block;
     padding: 15px 20px;
+  }
+  
+  .menu {
+    display: none;
   }
 }
