布局应用。简化了所有页面

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,7 @@
 ---
 import Footer from '../components/Footer.astro';
 import Header from '../components/Header.astro';
+import BaseLayout from '../layouts/BaseLayout.astro';
 import '../styles/global.css';
 
 const pageTitle = "关于我";
@@ -24,32 +25,8 @@ const skillColor = "crimson";
 const fontWeight = "bold";
 const textCase = "capitalize";
 ---
-
-<html lang="zh-cn">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type ="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content = {Astro.generator} >
-    
-    <style define:vars={{skillColor, fontWeight, textCase}}>
-      h1 {
-        color: purple;
-        font-size: 4rem;
-      }
-      .skill {
-        color: var(--skillColor);
-        font-weight: var(--fontWeightbold);
-        font-weight: var(--fontWeight);
-        text-transform: var(--textCase);
-    }
-    </style>
-    
-    <title>{pageTitle}</title>
-  </head>
-  <body>
-    <Header/>
-    <h1>{pageTitle}</h1>
+<BaseLayout pageTitle={pageTitle}>
+  <h3>—— (副标题) 了解更多关于我！</h3>
     <p>我正在学习 Astro 的入门教程。</p>
     <p>随着完成更多教程，该站点将不断更新，所以请继续查看我的旅程将如何进行吧！</p>
     <p>以下是关于我的几个事实：</p>
@@ -69,6 +46,4 @@ const textCase = "capitalize";
     {happy && <p>我非常乐意学习 Astro！</p>}
     {finished && <p>我完成了这节教程！</p>} <!-- 这行不会显示，因为 finished 是 false -->
     {goal === 3 ? <p>我的目标是在三天内完成。</p> : <p>我的目标不是 3 天。</p>}
-    <Footer/>
-  </body>
-</html>
+  </BaseLayout>
