--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,29 +2,12 @@
 import Header from '../components/Header.astro';
 import "../styles/global.css";
 import Footer from '../components/Footer.astro';
+import BaseLayout from '../layouts/BaseLayout.astro';
 
-const pageTitle = "首页";
+const pageTitle = "Y Astro";
 ---
 
-<html lang="zh-cn">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type ="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content = {Astro.generator} >
-    <title>YAstro</title>
-  </head>
-  <body>
-    <Header/>
-    <h1>Astro</h1>
-    <Footer/>
-    <script>
-      const menu = document.querySelector('.menu');
-
-      menu?.addEventListener('click', () => {
-      const isExpanded = menu.getAttribute('aria-expanded') === 'true';
-      menu.setAttribute('aria-expanded', `${!isExpanded}`);
-    });
-  </script>
-  </body>
-</html>
+<BaseLayout pageTitle={pageTitle}>
+  <h3>—— (副标题)  欢迎来到 YAstro 网站！</h3>
+  <p>这是我的第一个 Astro 网站首页。</p>
+</BaseLayout>
