--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,33 +1,13 @@
 ---
-import '../styles/global.css';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import Navigation from '../components/navigation.astro';
-
+import BaseLayout from "../layouts/BaseLayout.astro";
+const pageTitle="我的 Astro 学习笔记";
 ---
-
-<html lang="zh-cn">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type ="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content = {Astro.generator} >
-    <title>YAstro</title>
-  </head>
-  <body>
-      <Header/> 
-      <h1>我的 Astro 网站</h1>
-      <h1>我的 Astro 学习博客</h1>
-      <p>在这里，我将分享我的 Astro 学习之旅。</p>
-      <ul>
-          <li><a href="/posts/post-1/">文章 1</a></li>
-          <li><a href="/posts/post-2/">文章 2</a></li>
-          <li><a href="/posts/post-3/">文章 3</a></li>
-      </ul>
-      <Footer/>
-  </body>
-</html>
-
-<body>
-
-</body>
+<BaseLayout pageTitle={pageTitle}>
+  <p> —— 在这里，我将分享我的 Astro 学习之旅。</p>
+  <hr/>
+  <ul>
+      <li><a href="/posts/post-1/">文章 1</a></li>
+      <li><a href="/posts/post-2/">文章 2</a></li>
+      <li><a href="/posts/post-3/">文章 3</a></li>
+  </ul>
+</BaseLayout>
