布局嵌套，实现.md文章渲染的一致性。在 src/layouts/MarkdownPostLayout.astro 中导入 BaseLayout.astro 并将其用于包装整个模板内容

--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,8 +1,10 @@
 ---
+import BaseLayout from './BaseLayout.astro';
+
 const { frontmatter } = Astro.props;
 ---
-<meta charset="utf-8" />
-<h1>{frontmatter.title}</h1>
-<p>作者：{frontmatter.author}</p>
-<p>发表于：{frontmatter.pubDate}</p>
-<slot />
+<BaseLayout pageTitle={frontmatter.title}>
+    <p>作者：{frontmatter.author}</p>
+    <p>发表于：{frontmatter.pubDate}</p>
+    <slot />
+</BaseLayout>
