--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,13 +1,15 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
+import BlogPost from '../components/BlogPost.astro';
+
+const allPosts = Object.values(import.meta.glob('./posts/*.md', { eager: true }));// 获取所有文章的元数据。返回一个对象数组，每个博客文章对应一个对象。
+
 const pageTitle="我的 Astro 学习笔记";
 ---
 <BaseLayout pageTitle={pageTitle}>
   <p> —— 在这里，我将分享我的 Astro 学习之旅。</p>
   <hr/>
   <ul>
-      <li><a href="/posts/post-1/">文章 1</a></li>
-      <li><a href="/posts/post-2/">文章 2</a></li>
-      <li><a href="/posts/post-3/">文章 3</a></li>
+    {allPosts.map((post: any) => <BlogPost url={post.url} title={post.frontmatter.title} />)}
   </ul>
 </BaseLayout>
