Finished at all

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -17,7 +17,7 @@ const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Writing Docs"];
 
 // Some additional variables that are used by condition in the template
 const happy = true;
-const finished = false;
+const finished = true;
 const goal = 3;
 
 // Style variables
