--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,10 +1,23 @@
 ---
 import Menu from './Menu.astro';
 import Navigation from './Navigation.astro';
+import ThemeIcon from './ThemeIcon.astro';
+
 ---
 <header>
  <nav>
-   <Menu />
-   <Navigation />
- </nav>
+    <div>
+      <ThemeIcon />
+      <Menu />
+    </div>
+    <Navigation />
+
+  </nav>
 </header>
+
+<style>
+ div {
+   display: flex;
+   justify-content: space-between;
+ }
+</style>
