--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -81,3 +81,27 @@ footer {
     display: none;
   }
 }
+
+/* 深色模式样式 */
+html.dark {
+  background-color: #0d0950;
+  color: #fff;
+}
+
+.dark .menu {
+  background-color: #fff;
+  color: #000;
+}
+
+.dark .nav-links a:hover,
+.dark .nav-links a:focus {
+  color: #0d0950;
+}
+
+.dark .nav-links a {
+  color: #fff;
+}
+
+.dark a {
+  color: #ff9776;
+}
